# opa

./: .clang-format  .clang-tidy  .cmake-format.json  .gitignore  CLAUDE.md  CMakeLists.txt  Messages.sh  README  README.md  ecm_uninstall.cmake  flake.nix  prefix.sh  shell.nix  treefmt.nix
autotests/: CMakeLists.txt  ancestor_model_test.cpp  async_test.cpp  builtin_model.cpp  custom_sql_relational_model.cpp  database.cpp  database_migration_test.cpp  edit_proxy_model.cpp  event_editor.cpp  event_editor_dialog.cpp  event_repository_test.cpp  family_list_model_test.cpp  family_overview_test.cpp  family_proxy_model_test.cpp  family_repository_test.cpp  genealogical_date.cpp  genealogical_date_proxy_model.cpp  gramps_xml_test.cpp  grouping_model.cpp  grouping_proxy_model.cpp  location_repository_test.cpp  model_utils_find_source_model_of_type.cpp  name_repository_test.cpp  opa_date.cpp  openai_compatible_service_test.cpp  parent_query_model_test.cpp  pending_list_model_test.cpp  person_repository_test.cpp  read_only_proxy_model.cpp  source_repository_test.cpp  test_utils.h  transaction_batching_test.cpp  tree_proxy_model.cpp  type_translation_repository_test.cpp  type_translation_resolver_test.cpp
example/: CMakeLists.txt  SimpleGraphModel.cpp  SimpleGraphModel.h  main.cpp
src/: CMakeLists.txt  formatting.cpp  formatting.h  main.cpp  names.cpp  names.h  opaSettings.cpp  opaSettings.h  opadebug.cpp  opadebug.h  opaui.rc  org.example.opa.appdata.xml  org.example.opa.desktop  resources.qrc
src/ai/: ai_service.cpp  ai_service.h  claude_ai_service.cpp  claude_ai_service.h  local_ai_service.h  openai_compatible_service.cpp  openai_compatible_service.h  utils.cpp  utils.h
src/core/: base_repository.h  data_event_broker.cpp  data_event_broker.h  keychain_keys.h  query_helper.cpp  query_helper.h  query_utils.h
src/data/: data_manager.cpp  data_manager.h  database.cpp  database.h  event.cpp  event.h  family.cpp  family.h  names.cpp  names.h  person.cpp  person.h  source.cpp  source.h
src/database/: database.cpp  database.h  init.sql  schema.h  schema.sql  seed.sql
src/dates/: genealogical_date.cpp  genealogical_date.h  genealogical_date_edit_window.cpp  genealogical_date_edit_window.h  genealogical_date_edit_window.ui  genealogical_date_editor_dialog.cpp  genealogical_date_editor_dialog.h  genealogical_date_editor_dialog.ui  genealogical_date_proxy_model.cpp  genealogical_date_proxy_model.h
src/docks/: person_list_dock.cpp  person_list_dock.h  source_list_dock.cpp  source_list_dock.h
src/editors/: editor_dialog.cpp  editor_dialog.h  event_editor_dialog.cpp  event_editor_dialog.h  event_editor_dialog.ui  location_editor_dialog.cpp  location_editor_dialog.h  location_editor_dialog.ui  name_editor_dialog.cpp  name_editor_dialog.h  name_editor_dialog.ui  new_family_editor_dialog.cpp  new_family_editor_dialog.h  new_family_editor_dialog.ui  new_person_editor_dialog.cpp  new_person_editor_dialog.h  new_person_editor_dialog.ui  note_editor_dialog.cpp  note_editor_dialog.h  source_editor_dialog.cpp  source_editor_dialog.h  source_editor_dialog.ui  type_translations_dialog.cpp  type_translations_dialog.h  type_translations_dialog.ui
src/event/: event_table_model.cpp  event_table_model.h  event_table_view.cpp  event_table_view.h
src/events/: event_editor.cpp  event_editor.h  event_editor.ui  temp.ui
src/import/: gramps_xml.cpp  gramps_xml.h  import_wizard.cpp  import_wizard.h
src/link_existing/: choose_existing_event_window.cpp  choose_existing_event_window.h  choose_existing_location_window.cpp  choose_existing_location_window.h  choose_existing_media_window.cpp  choose_existing_media_window.h  choose_existing_person_window.cpp  choose_existing_person_window.h  choose_existing_reference_window.cpp  choose_existing_reference_window.h  choose_existing_source_window.cpp  choose_existing_source_window.h
src/lists/: event_roles_management_view.cpp  event_roles_management_view.h  event_roles_management_window.cpp  event_roles_management_window.h  event_types_management_window.cpp  event_types_management_window.h  location_management_window.cpp  location_management_window.h  location_types_management_window.cpp  location_types_management_window.h  name_origins_management_view.cpp  name_origins_management_view.h  name_origins_management_window.cpp  name_origins_management_window.h  simple_list_manager.cpp  simple_list_manager.h  source_types_management_window.cpp  source_types_management_window.h
src/main/: ai_settings_widget.cpp  ai_settings_widget.h  main_window.cpp  main_window.h  opaSettings.kcfg  opaSettings.kcfgc  people_list_model.cpp  people_list_model.h  people_overview_view.cpp  people_overview_view.h  people_table_model.cpp  people_table_model.h  people_table_view.cpp  people_table_view.h  person_detail_view.cpp  person_detail_view.h  person_list_widget.cpp  person_list_widget.h  person_placeholder_widget.cpp  person_placeholder_widget.h  settings.ui
src/main_person_tab/: person_list.cpp  person_list.h
src/model/: object_table_model.h
src/names/: nameEditor.cpp  nameEditor.h  nameEditor.ui  name_editor.cpp  name_editor.h  name_editor.ui  names_overview_view.cpp  names_overview_view.h  names_table_view.cpp  names_table_view.h
src/notes/: note_editor_window.cpp  note_editor_window.h
src/person_detail/: person_detail_view.cpp  person_detail_view.h  person_detail_view.ui  person_event_overview_view.cpp  person_event_overview_view.h  person_event_tab.cpp  person_event_tab.h  person_family_tab.cpp  person_family_tab.h  person_media_tab.cpp  person_media_tab.h  person_name_tab.cpp  person_name_tab.h
src/resources/: init.sql
src/tree_view/: person_tree_graph_model.cpp  person_tree_graph_model.h  tree_view_window.cpp  tree_view_window.h
src/utils/: async.cpp  async.h  builtin_model.cpp  builtin_model.h  builtin_text_translating_delegate.cpp  builtin_text_translating_delegate.h  custom_sql_relational_model.cpp  custom_sql_relational_model.h  edit_proxy_model.cpp  edit_proxy_model.h  formatted_identifier_delegate.cpp  formatted_identifier_delegate.h  gramps_date.cpp  (+32 more)
(+146 files in other folders)
